--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header{
   justify-content:space-between;
   flex-direction:row;
   padding:10px 5px;
+  font-size:20px;
 }
 /* TEMEL CSS KOD BİTİŞİ - - - */
 
