--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ header{
   flex-direction:row;
   padding:10px 5px;
   font-size:20px;
+  background:#212121;
+  color:white;
 }
 /* TEMEL CSS KOD BİTİŞİ - - - */
 
