--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
 * {
+  font-family:Garamond;
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
   outline: none;
   border: none;
   box-sizing: border-box;
-  font-family:Garamond;
 }
 
 html {
@@ -26,11 +26,11 @@ header{
   flex-direction:row;
   padding:10px 5px;
   font-size:20px;
-  background:#212121;
+  background:orange;
   color:white;
 }
 header h1{
-  font-size:16px;
+  font-size:18px;
 }
 
 
