--- a/style.css
+++ b/style.css
@@ -19,19 +19,21 @@ html {
 /* + + + TEMEL CSS KOD BAŞLANGICI */
 :root {}
 
-body{
+.card-sites{
   background:linear-gradient(250deg,#00ccff74,#1249d6aa),url(https://images.pexels.com/photos/9396346/pexels-photo-9396346.jpeg?auto=compress&cs=tinysrgb&h=650&w=940);
   background-size:cover;
-}
-.card-sites{
   display:flex;
   align-items:center;
   justify-content:space-between;
   flex-direction:row;
   padding:10px 5px;
   font-size:20px;
-  background:;
+  position:fixed;
   color:white;
+  top:0px;
+  left:0px;
+  right:0px;
+  bottom:0px;
 }
 header h1{
   font-size:18px;
