--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css?family=Garamond");
+@import url("https://fonts.googleapis.com/css?family=Oxanium");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css");
 
 * {
-  font-family:Garamond;
+  font-family:Oxanium;
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
@@ -36,7 +36,7 @@ html {
   bottom:0px;
 }
 h1{
-  font-family:Garamond;
+  font-family:Oxanium;
   text-align:center;
 }
 
