--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1{
 a{
   padding:10px;
   border-radius:5px;
-  color:transparent;
+  color:black;
   background:white;
   text-align:center;
   text-decoration:none;
