--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ html {
 .card-sites>*{
   margin:10px 0px;
 }
-.fa-discord{
-  font-size:30px;
+.discord-icon{
+  font-size:40px;
 }
 h1{
   font-family:Oxanium;
