--- a/style.css
+++ b/style.css
@@ -49,13 +49,14 @@ h1{
 a{
   padding:10px;
   border-radius:5px;
-  color:black;
-  background:white;
+  color:#000000dd;
+  background:#ffffffcc;
   text-align:center;
   text-decoration:none;
   display:block;
   font-size:16px;
   margin:10px 0px;
+  font-weight:600;
 }
 
 
