--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ html {
 .discord-icon{
   font-size:60px !important;
 }
+.icon-arin{
+  max-width:30%;
+  width:100%;
+  max-height:100%;
+  border-radius:5px;
+  margin:15px 0px;
+}
 h1{
   font-family:Oxanium;
   text-align:center;
