--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html {
   max-width:30%;
   width:100%;
   max-height:100%;
-  border-radius:5px;
+  border-radius:50%;
   margin:15px 0px;
 }
 h1{
