--- a/style.css
+++ b/style.css
@@ -62,10 +62,12 @@ a {
   font-size: 16px;
   margin: 10px 0px;
   font-weight: 600;
+  transition:0.5s;
 }
 a:hover{
   background:#212121aa;
   color:#ffffffa9;
+  transition:0.5s;
 }
 
 
